# src/CodeForge.Application/MyCourses/Common/MyCourseSummaryDto.cs
@@ -1,0 +1,10 @@
+namespace CodeForge.Application.MyCourses.Common
+{
+    public record MyCourseSummaryDto(
+        Guid CourseId,
+        string Title,
+        string? Description,
+        string CohortName,
+        DateTime CohortStartDate,
+        DateTime CohortEndDate);
+}
